# Atlas-Fusion-2.0-Interfaces

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
msg/: CameraData.msg  GnssPositionData.msg  ImuDquatData.msg  ImuGnssData.msg  ImuImuData.msg  ImuMagData.msg  ImuPressureData.msg  ImuTempData.msg  ImuTimeData.msg  LidarData.msg  RGBCameraData.msg  RadarData.msg  RadarDetection.msg  YoloDetection.msg
srv/: EstimatePositionInTime.srv
